# BinnAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 07c8d9e0f1a2_replace_textbook_vocabulary_with_sequence.py  18d9e0f1a2b3_add_vocabulary_dictionary_enrichment.py  29e0f1a2b3c4_add_rich_vocabulary_dictionary_fields.py  30f1a2b3c4d5_add_vocabulary_audio_urls.py  41a2b3c4d5e6_add_rag_observability_exercises.py  4b1f2c3d4e5f_add_foreign_key_constraints.py  52a3b4c5d6e7_scope_knowledge_source_sha256_to_owner.py  63b4c5d6e7f8_add_writing_phrases.py  74c5d6e7f8a9_add_vocabulary_personal_cards.py  7c2d9e1f3a4b_add_conversation_messages.py  85d6e7f8a9b0_add_learning_memory_events.py  d92b8a1e392d_initial_tables.py  (+14 more)
binnagent-frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
books/: manifest.yaml
docs/: core-upgrade.md  english-learning-companion-agent-architecture.md  explore-capability-recommendation.md  frontend-design-system.md  langgraph-memory-multi-agent-architecture.md  memory-architecture-v2.md  web-frontend.md
grammar-remotion-video/: package-lock.json
remotion-video/: README.md  package-lock.json  package.json
scripts/: dev.sh  langfuse.sh  refresh_textbook_vocabulary.py  reset_data.py  reset_data.sh  run_learner_simulation.py  run_learner_simulation.sh
src/: cache.py  config.py  db.py  main.py  observability.py
tests/: conftest.py  test_health.py  test_observability.py
(+337 files in other folders)
